--- a/image-modal--simple.css
+++ b/image-modal--simple.css
@@ -12,10 +12,21 @@
   border-radius: 5px;
 }
 
+.modal__image__wrapper {
+  text-align: center;
+}
+
+.helper {
+  display: inline-block;
+  height: 100%;
+  vertical-align: middle;
+}
+
 .modal__image {
-  background-repeat: no-repeat !important;
-  background-position: center center !important;
-  background-size: initial !important;
+  position: relative;
+  max-width: 100%;
+  max-height: 100%;
+  vertical-align: middle;
 }
 
 .modal__shadow {
